fix deprecated methods